combine three apis into one
